News
====

.. contents::

svn trunk
---------

* Fixed problem where ``paste.recursive`` would leave ``wsgi.input``
  and ``CONTENT_LENGTH`` set for recursive requests.

1.1
---

* Security fix for ``paste.urlparser.StaticURLParser``.  The problem
  allowed escaping the root (and reading files) when used with
  ``paste.httpserver`` (this does not effect other servers, and does
  not apply when proxying requests from Apache to
  ``paste.httpserver``).

* ``paste.httpserver`` and ``paste.fixture.TestApp`` url-unquote
  ``SCRIPT_NAME`` and ``PATH_INFO``, as specified in the CGI spec.
  Thanks to Jon Nelson for pointing out both these issues.

* ``paste.registry`` now works within the ``EvalException``
  interactive debugger.

* Fixed ``paste.auth.open_id`` failures not returning a correct
  response.

* Changed ``paste.httpexceptions.HTTPUnauthorized`` so that the
  ``WWW-Authenticate`` header is not required.  401 responses don't
  *have* to have that header.

* In ``paste.fixture.TestApp``: ``<form>`` tags that have to
  ``action`` will preserve the existing query string.  (Generally
  relative links that are completely empty should but were not
  preserving the query string)

* Made ``paste.*`` compatible with `py2exe <http://www.py2exe.org/>`_
  by adding a ``modulefinder`` call in ``__init__.py``

* The ``paste.gzipper`` gzipping middleware wasn't changing the
  Content-Length header properly; thanks to Brad Clements for the fix.

* Fixed ``paste.proxy`` to not use anything based on the dict form of
  ``httplib..HTTPMessage``.  This form folds headers together in a way
  that breaks ``Set-Cookie`` headers (two ``Set-Cookie`` headers would
  be merged into one).

* ``paste.request.parse_formvars`` didn't accept parameters in
  ``CONTENT_TYPE``.  ``prototype.js`` sets a ``charset`` parameter,
  which caused a problem.

* Added a ``__traceback_decorator__`` magic local variable, to allow
  arbitrary manipulation of the output of